# activity-tracker-desktop

./: .gitignore  README.md  analysis.py  config.template.py  main.py  pyproject.toml  requirements.txt
desktop/: .gitignore  DESKTOP-README.md  DEVELOPMENT-NOTES.md  INSTALLATION-GUIDE.md  PROJECT-SUMMARY.md  QUICK-REFERENCE.md  README.md  desktop-app.md  package-lock.json  package.json  start.bat  start.sh  tsconfig.json  vite.config.ts
desktop/electron/: analyzer.ts  config.ts  db-reader.ts  sql.js.d.ts
desktop/src/: App.tsx
desktop/src/components/: Dashboard.tsx  Settings.tsx  Summary.tsx
