[project]
name = "activity-tracker-desktop"
version = "0.1.0"
description = "Activity tracker desktop application with Python analysis tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.0",
    "pandas>=2.3.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "numpy>=2.3.0",
]
